completes CRUD file
