# routes/spice-route.js
@@ -1,5 +1,5 @@
 const { Router } = require('express')
-const { getAllSpices, createSpices } = require('../service/spice-service.js')
+const { getAllSpices, createSpices, updateSpices, deleteSpices } = require('../service/spice-service.js')
 const authorizationMiddleware = require('../middleware/authorization-middleware.js')
 
 const spiceRouter = Router()
@@ -9,5 +9,16 @@ const spiceRouter = Router()
 spiceRouter.get('/', getAllSpices)
 spiceRouter.post('/', authorizationMiddleware, createSpices)
 
+spiceRouter.patch(
+    "/:id",
+    authorizationMiddleware,
+    updateSpices
+  );
+  
+spiceRouter.delete(
+    "/:id",
+    authorizationMiddleware,
+    deleteSpices
+  );
 
 module.exports = spiceRouter
